# SnakeGame

./: CMakeLists.txt  README.md  main.cpp
include/: AppleObject.h  EndScene.h  FontManager.h  GameObject.h  GameScene.h  MainMenuScene.h  PauseScene.h  Scene.h  SceneManager.h  SnakeObject.h  SpriteManager.h  Tag.h  tempCodeRunnerFile.h
src/: GameObject.cpp  GameObject.h  Scene.cpp  SnakeObject.cpp  main  main.cpp
src/fonts/: FontManager.cpp
src/gameobjects/: AppleObject.cpp  GameObject.cpp  SnakeObject.cpp
src/scenes/: EndScene.cpp  GameScene.cpp  GameScene.h  MainMenuScene.cpp  Scene.cpp  SceneManager.cpp
src/sprites/: SpriteManager.cpp
